Fixed issue where modal backdrop wouldn't cover entire background if the user scrolls. Changed max height for selected class div and set overflow to auto. Updated margin-top of the main container div to go back to correct height.

--- a/src/components/Classes/classes.css
+++ b/src/components/Classes/classes.css
@@ -30,7 +30,8 @@
   padding-bottom: 1rem;
   padding-top: .1rem;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  height: auto;
+  max-height: 60vh;
+  overflow: auto;
 }
 .selected-class-header {
   display: flex;
@@ -57,7 +58,7 @@
   width: 55vw;
   display: inline-block;
   position: relative;
-  margin-top: 21rem;
+  margin-top: 2rem;
 }
 
 .grade-chart {
